--- a/Programming/1.html
+++ b/Programming/1.html
@@ -14,6 +14,7 @@
             <th class="table">Name</th>
             <th class="table">Surname</th>
             <th class="table">Detele</th>
+            <th class="table">Detele</th>
         </tr>
     </table>
 
